# serializer version: 1
# name: test_remotes[remote.xone-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'remote',
    'entity_category': None,
    'entity_id': 'remote.xone',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'HIJKLMN',
    'unit_of_measurement': None,
  })
# ---
# name: test_remotes[remote.xone-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'XONE',
      'supported_features': <RemoteEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'remote.xone',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_remotes[remote.xonex-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'remote',
    'entity_category': None,
    'entity_id': 'remote.xonex',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'ABCDEFG',
    'unit_of_measurement': None,
  })
# ---
# name: test_remotes[remote.xonex-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'XONEX',
      'supported_features': <RemoteEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'remote.xonex',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
